--- a/prueba/style.css
+++ b/prueba/style.css
@@ -1,6 +1,10 @@
 *{
     outline: solid 1px black;
 }
+body{
+    background-image:url(purple.jfif) ;
+    background-size: cover;
+}
 
 #calculator{
     display: flex;
@@ -10,10 +14,12 @@
 }
 .cero{
     font-size: 25px; 
-    margin-left: 15px;
+    margin: 20px;
+    margin-right: -250px;
+
 }
 .button{
-    background-color: hsl(253, 90%, 80%);
+    background-color: hsl(278, 74%, 71%);
     padding: 30px;
     font-size: 20px;
     margin: 4px;
@@ -21,7 +27,7 @@
     box-shadow: 4px 4px black;
 }
 .operator{
-    background-color: #625ffa;
+    background-color: hsl(279, 68%, 54%);
     padding: 30px;
     font-size: 20px;
     margin: 0px;
@@ -41,12 +47,14 @@
     justify-content: space-between;
     align-content: center;
     padding: 10px 20px;
-    background-color: rgb(210, 167, 250);
+    background-color: rgb(190, 126, 250);
+    
 }
 h1{
     font-size: 40px;
     font-family: 'Courier New', Courier, monospace;
     margin-left: 100px;
+    color:rgb(0, 0, 0);
 }
 
 .lista{
@@ -54,6 +62,8 @@ h1{
     justify-content: center;
     margin-right: 20px;
     margin-top: 50px;
+    font-size: 25px;
+    color: rgb(239, 236, 236);
 }
 
 .lista li{
